<resources>
    <string name="app_name">Homework 1</string>

    <string name="name">Name</string>
    <string name="Address">Address</string>
    <string name="Phone">Phone</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="confirm">Confirm password</string>
    <string name="ok">uwu</string>
    <string name="clear">Clear</string>
    <!--Esto es del Spinner-->
    <string-array name="user">
        <item>Selecciona un usuario</item>
        <item>Invitado</item>
        <item>Administrador</item>
        <item>Usuario Regular</item>
    </string-array>
    <!--Esto es del menu-->
    <string name="str_option1">Option1</string>
    <string name="str_option2">Option2</string>
    <string name="str_option3">Option3</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
