<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lopsan.tareita1.verticalFragment">

    <TextView
        android:id="@+id/text_name"
        android:layout_width="95dp"
        android:layout_height="43dp"
        android:text="@string/name"
        android:layout_above="@+id/text_address"
        android:layout_alignLeft="@+id/text_address"
        android:layout_alignStart="@+id/text_address"
        android:layout_marginBottom="28dp" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_alignTop="@+id/text_name"
        android:layout_centerHorizontal="true"
        android:inputType="text" />


    <TextView
        android:id="@+id/text_address"
        android:layout_width="95dp"
        android:layout_height="43dp"
        android:text="@string/Address"
        android:layout_gravity="left|center_vertical"
        android:layout_above="@+id/edit_phone"
        android:layout_alignLeft="@+id/text_password"
        android:layout_alignStart="@+id/text_password"
        android:layout_marginBottom="23dp" />

    <EditText
        android:id="@+id/edit_address"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_alignTop="@+id/text_address"
        android:layout_toRightOf="@+id/text_name"
        android:layout_toEndOf="@+id/text_name"
        android:inputType="text" />

    <TextView
        android:id="@+id/text_phone"
        android:layout_width="95dp"
        android:layout_height="43dp"
        android:text="@string/Phone"
        android:layout_gravity="left|center_vertical"
        android:layout_above="@+id/text_email"
        android:layout_alignLeft="@+id/text_email"
        android:layout_alignStart="@+id/text_email"
        android:layout_marginBottom="17dp" />

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_alignBaseline="@+id/text_phone"
        android:layout_alignBottom="@+id/text_phone"
        android:layout_alignLeft="@+id/edit_address"
        android:layout_alignStart="@+id/edit_address"
        android:inputType="number" />

    <TextView
        android:id="@+id/text_email"
        android:layout_width="95dp"
        android:layout_height="43dp"
        android:text="@string/Email"
        android:layout_gravity="left|center_vertical"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/edit_password"
        android:layout_toStartOf="@+id/edit_password" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_below="@+id/text_phone"
        android:layout_alignLeft="@+id/edit_phone"
        android:layout_alignStart="@+id/edit_phone"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_alignTop="@+id/text_password"
        android:layout_alignLeft="@+id/edit_name"
        android:layout_alignStart="@+id/edit_name"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/text_password"
        android:layout_width="95dp"
        android:layout_height="43dp"
        android:text="@string/Password"
        android:layout_gravity="left|center_vertical"
        android:layout_below="@+id/text_email"
        android:layout_alignLeft="@+id/text_confirm"
        android:layout_alignStart="@+id/text_confirm"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/edit_confirm"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_alignBottom="@+id/text_confirm"
        android:layout_alignLeft="@+id/edit_phone"
        android:layout_alignStart="@+id/edit_phone"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/text_confirm"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/confirm"
        android:layout_gravity="left|center_vertical"
        android:layout_below="@+id/text_password"
        android:layout_toLeftOf="@+id/edit_password"
        android:layout_toStartOf="@+id/edit_password"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_marginTop="24dp"
        android:id="@+id/button"
        android:layout_below="@+id/text_confirm"
        android:layout_toLeftOf="@+id/edit_confirm"
        android:layout_toStartOf="@+id/edit_confirm" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:layout_alignTop="@+id/button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="60dp"
        android:layout_marginEnd="60dp"
        android:onClick="borra"
        android:id="@+id/no_se"/>




</RelativeLayout>
